crates/swc/tests/tsc-references/classExtendsItselfIndirectly_es5.1.normal.js
import _class_call_check from "@swc/helpers/lib/_class_call_check.js";
import _inherits from "@swc/helpers/lib/_inherits.js";
import _create_super from "@swc/helpers/lib/_create_super.js";
var C = /*#__PURE__*/ function(E1) {
    "use strict";
    _inherits(C, E1);
    var _super = _create_super(C);
    function C() {
        _class_call_check(this, C);
        return _super.apply(this, arguments);
    }
    return C;
} // error
(E);
var D = /*#__PURE__*/ function(C) {
    "use strict";
    _inherits(D, C);
    var _super = _create_super(D);
    function D() {
        _class_call_check(this, D);
        return _super.apply(this, arguments);
    }
    return D;
}(C);
var E = /*#__PURE__*/ function(D) {
    "use strict";
    _inherits(E, D);
    var _super = _create_super(E);
    function E() {
        _class_call_check(this, E);
        return _super.apply(this, arguments);
    }
    return E;
}(D);
var C2 = /*#__PURE__*/ function(E21) {
    "use strict";
    _inherits(C2, E21);
    var _super = _create_super(C2);
    function C2() {
        _class_call_check(this, C2);
        return _super.apply(this, arguments);
    }
    return C2;
} // error
(E2);
var D2 = /*#__PURE__*/ function(C2) {
    "use strict";
    _inherits(D2, C2);
    var _super = _create_super(D2);
    function D2() {
        _class_call_check(this, D2);
        return _super.apply(this, arguments);
    }
    return D2;
}(C2);
var E2 = /*#__PURE__*/ function(D2) {
    "use strict";
    _inherits(E2, D2);
    var _super = _create_super(E2);
    function E2() {
        _class_call_check(this, E2);
        return _super.apply(this, arguments);
    }
    return E2;
}(D2);
